@@ -39,6 +39,7 @@ This issue fixes several bugs that were still found in 1.9.2.
 * Windows installer no longer clears %PATH% if longer than 1024 chars
 * Fix inoperative -tbn/-tbnall/-tbnauto options in egg-optchar
 * Fix tinydisplay texture errors on shutdown
+* Fix mipmap filtering issues in tinydisplay renderer
 
 ------------------------  RELEASE 1.9.2  ------------------------
 
